--- a/add_image.html
+++ b/add_image.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
+  {% extends "layout.html" %}
 
-<head>
-  <title>Lisää profiilikuva</title>
-</head>
+  {% block title %}Lisää profiilikuva{% endblock %}
 
-<body>
-  <h1>Lisää profiilikuva</h1>
+  {% block content %}
+
+  <h2>Lisää profiilikuva</h2>
 
   <p>
     Lähetä jpg-tiedosto, jonka koko on enintään 100 kt
@@ -26,6 +24,5 @@
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
     <input type="submit" value="Lähetä" />
   </form>
-</body>
 
-</html>
+  {% endblock %}
