--- a/search.html
+++ b/search.html
@@ -1,44 +1,37 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Haku</title>
-</head>
+{% block title %}Haku{% endblock%}
 
-<body>
-  <h1>Haku</h1>
+{% block content %}
 
-  <form action="/search" method="get">
-    <p>
-      Hakusana:
-      {% if query %}
-      <input type="text" name="query" value="{{ query }}" />
-      {% else %}
-      <input type="text" name="query" />
-      {% endif %}
-    </p>
-    <input type="submit" value="Hae" />
-  </form>
+<h2>Haku</h2>
 
-  {% if query %}
-  <hr />
-  <h2>Tulokset</h2>
-  
-  <ul>
-  {% for result in results %}
-    <li>
-      <a href="/thread/{{ result.thread_id }}#{{ result.message_id }}">
-        {{ result.thread_title }}
-      </a>
-      <br />
-      {{ result.username }} ({{ result.sent_at }})
-    </li>
-  {% endfor %}
-  </ul>
-  {% endif %}
+<form action="/search" method="get">
   <p>
-    <a href="/">Etusivulle</a>
+    <label for="query">Hakusana</label>:
+    {% if query %}
+    <input type="text" id="query" name="query" value="{{ query }}" />
+    {% else %}
+    <input type="text" id="query" name="query" />
+    {% endif %}
   </p>
-</body>
+  <input type="submit" value="Hae" />
+</form>
 
-</html>
+{% if query %}
+<h3>Tulokset</h3>
+
+<ul>
+{% for result in results %}
+  <li>
+    <a href="/thread/{{ result.thread_id }}#{{ result.message_id }}">
+      {{ result.thread_title }}
+    </a>
+    <br />
+    {{ result.username }} ({{ result.sent_at }})
+  </li>  
+{% endfor %}
+</ul>
+{% endif %}
+
+{% endblock %}
