--- a/user.html
+++ b/user.html
@@ -1,60 +1,52 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Käyttäjä {{ user.username }}</title>
-</head>
+{% block title %}Käyttäjä {{ user.username }}{% endblock %}
 
-<body>
-  <h1>Käyttäjä {{ user.username }}</h1>
+{% block content %}
 
-  {% for message in get_flashed_messages() %}
-  <p>
-    <b>{{ message }}</b>
-  </p>
-  {% endfor %}
+<h2>Käyttäjä {{ user.username }}</h2>
 
-  <div class="profile_picture">
-  {% if user.has_image %}
-  <img src="/image/{{ user.id }}" alt="Käyttäjän {{ user.username }} kuva" style="width:20%">
-  </div>
-  {% endif %}
+{% for message in get_flashed_messages() %}
+<p class="info">
+  {{ message }}
+</p>
+{% endfor %}
 
-  {% if user.id == session.user_id %}
-  <p>
-    <a href="/add_image">Lisää profiilikuva</a>
-  </p>
-  {% endif %}
+{% if user.has_image %}
+<img src="/image/{{ user.id }}" alt="Käyttäjän {{ user.username }} kuva">
+{% endif %}
 
-  <p>
-    Käyttäjä on lähettänyt {{ messages | count }} kommenttia
-  </p>
+{% if user.id == session.user_id %}
+<p>
+  <a href="/add_image">Lisää profiilikuva</a>
+</p>
+{% endif %}
 
-  {% if messages %}
-  <p>
-    Ensimmäinen kommentti lähetetty {{ messages[-1].sent_at }}
-  </p>
-  <p>
-    Viimeisin kommentti lähetetty {{ messages[0].sent_at }}
-  </p>
-  {% endif %}
+<p>
+  Käyttäjä on lähettänyt {{ messages | count }} kommenttia
+</p>
 
-  <h2>Kommentit</h2>
+{% if messages %}
+<p>
+  Ensimmäinen kommentti lähetetty {{ messages[-1].sent_at }}
+</p>
+<p>
+  Viimeisin kommentti lähetetty {{ messages[0].sent_at }}
+</p>
+{% endif %}
 
-  <ul>
-  {% for message in messages %}
-    <li>
-      <a href="/thread/{{ message.thread_id }}#{{ message.id }}">
-        {{ message.thread_title }}
-      </a>
-      <br />
-      ({{ message.sent_at }})
-    </li>  
-  {% endfor %}
-  </ul>
-  <p>
-    <a href="/">Etusivulle</a>
-  </p>
-</body>
+<h3>Kommentit</h3>
 
-</html>
+<ul>
+{% for message in messages %}
+  <li>
+    <a href="/thread/{{ message.thread_id }}#{{ message.id }}">
+      {{ message.thread_title }}
+    </a>
+    <br />
+    ({{ message.sent_at }})
+  </li>  
+{% endfor %}
+</ul>
+
+{% endblock %}
